Changed comments design. Items looks more correct in search

--- a/Collectors/Views/Collections/Create.cshtml
+++ b/Collectors/Views/Collections/Create.cshtml
@@ -51,7 +51,7 @@
                 <br />
                 <img id="imageUpload" src="~/bootstrap-icons/icons/eye-fill.svg" class="d-none" />*@
         </div>
-        <button id="createButton" class="btn btn-primary" type="submit">@Localizer["Create new collection"]</button>
+        <button id="createButton" class="btn btn-primary mb-5" type="submit">@Localizer["Create new collection"]</button>
     </form>
 
     @*@section scripts{
