--- a/Collectors/Views/Collections/Edit.cshtml
+++ b/Collectors/Views/Collections/Edit.cshtml
@@ -37,7 +37,7 @@
                 </div>
 
             </div>
-            <div class="form-group m-5">
+            <div class="form-group mb-5 mt-5">
                 <label>@Localizer["Change/Add the image of collection"]</label>
                 <input name="Image" type="file" class="form-control m-2" />
                 <button class="btn btn-primary" type="submit">@Localizer["Finish"]</button>
