--- a/Collectors/Views/Collections/Index.cshtml
+++ b/Collectors/Views/Collections/Index.cshtml
@@ -6,7 +6,7 @@
 <div class="img">
     <img src="~/img/8-TRACK-COLLECTION.jpg" alt="Snow" style="width:100%;">
     <div class="centered">
-        <h1>@Localizer["Manage collections"]</h1>
+        <h1 class="big-header">@Localizer["Manage collections"]</h1>
         <form>
             <button class="btn-success" asp-action="Create">
                 @Localizer["add new collection"]
