--- a/Collectors/Views/Collections/Index.cshtml
+++ b/Collectors/Views/Collections/Index.cshtml
@@ -24,7 +24,7 @@
 
                     <div class="card m-3 d-inline-block p-1 bg-info">
                         <form>
-                            <input class="btn-link" asp-for="Id" value="@element.Id" type="hidden" />
+                            <input class="btn-info" asp-for="Id" value="@element.Id" type="hidden" />
                             <button class="btn-info" type="submit" asp-action="Edit">
                                 <img src="~/bootstrap-icons/icons/pencil.svg" />
                             </button>
