--- a/Collectors/Views/Home/Index.cshtml
+++ b/Collectors/Views/Home/Index.cshtml
@@ -83,11 +83,14 @@
                             <p class="card-text">@item.Tags</p>
                         </div>
                         <ul class="list-group list-group-flush">
-                            @foreach (var value in item.AdditionalFieldsValues)
+                            @for (int i = 0; i < item.AdditionalFieldsNames.Count; i++)
                             {
+                                string fieldName = item.AdditionalFieldsNames[i];
+                                string value = item.AdditionalFieldsValues[i];
                                 if (!string.IsNullOrEmpty(value))
                                 {
                                     <li class="list-group-item field">
+                                        @fieldName:
                                         @Html.Raw(value)
                                     </li>
                                 }
