--- a/Collectors/Views/Items/Edit.cshtml
+++ b/Collectors/Views/Items/Edit.cshtml
@@ -6,7 +6,7 @@
 @{
     IFieldManager fieldManager = new FieldManager(ViewBag.Item);
 }
-<div class="container">
+<div class="container p-4 mb-5">
     <h2 class="text-center m-4">@SharedLocalizer["Edit your item"]</h2>
     <form method="post" class="needs-validation" novalidate>
         <input asp-for="@Model.Tags" id="tags" value="@string.Join(',',ViewBag.Tags)" type="hidden" />
