--- a/Collectors/Views/Collections/Create.cshtml
+++ b/Collectors/Views/Collections/Create.cshtml
@@ -1,6 +1,7 @@
 ﻿@model CollectionCreateModel;
 @using Microsoft.AspNetCore.Mvc.Localization;
 @using Collectors.Data.Classes;
+@inject IHtmlLocalizer<SharedResource> SharedLocalizer
 @inject IViewLocalizer Localizer;
 @{
     var themes = Enum.GetValues(typeof(CollectionTheme));
@@ -16,10 +17,10 @@
         <h5>@Localizer["Collection theme"]:</h5><br />
         <div id="collection theme" class="mb-5">
             @{
-                foreach (var e in themes)
+                foreach (var theme in themes)
                 {
-                    <input class="custom-radio" type="radio" asp-for="@Model.CollectionTheme" value="@e" />
-                    @e
+                    <input class="custom-radio" type="radio" asp-for="@Model.CollectionTheme" value="@theme" />
+                    @SharedLocalizer[theme.ToString()]
                     <br />
                 }
             }
@@ -45,11 +46,11 @@
         <div class="mb-3">
             <input name="Image" type="file" class="form-control" />
             @*<div id="uploadBlock" class="d-flex align-content-center justify-content-center"
-                 style="height:400px; width:400px; border:1px solid black">
-                @Localizer["Drop your image here"]
-            </div>
-            <br />
-            <img id="imageUpload" src="~/bootstrap-icons/icons/eye-fill.svg" class="d-none" />*@
+                     style="height:400px; width:400px; border:1px solid black">
+                    @Localizer["Drop your image here"]
+                </div>
+                <br />
+                <img id="imageUpload" src="~/bootstrap-icons/icons/eye-fill.svg" class="d-none" />*@
         </div>
         <button id="createButton" class="btn btn-primary mb-5" type="submit">@Localizer["Create new collection"]</button>
     </form>
