--- a/Collectors/Views/Home/Index.cshtml
+++ b/Collectors/Views/Home/Index.cshtml
@@ -5,13 +5,14 @@
 @using Markdig;
 @inject UserManager<IdentityUser> UserManager;
 @inject SignInManager<IdentityUser> SignInManager
+@inject IHtmlLocalizer<SharedResource> SharedLocalizer
 @inject IViewLocalizer Localizer;
 @{
     ViewData["Title"] = "Home Page";
 }
 @model StartModel;
 
-<div class="text-center">
+<div class="text-center pb-5">
     <div id="carouselExampleControls" class="carousel slide w-100" data-ride="carousel">
         <div class="carousel-inner">
             @{
@@ -30,11 +31,11 @@
                             <img class="center-block w-100 h-auto" src="~/img/blank.jfif" alt="">
                         }
                         <div class="centered">
-                            <h1 class="big-header">Theme : @Enum.GetValues(typeof(CollectionTheme)).GetValue(collection.ThemeId)</h1>
+                            <h1 class="big-header">@SharedLocalizer[Enum.GetValues(typeof(CollectionTheme)).GetValue(collection.ThemeId).ToString()]</h1>
                             <div class="description">@Html.Raw(Markdown.ToHtml(collection.ShortDescription))</div>
                             <form>
                                 <input name="id" type="hidden" value="@collection.Id" />
-                                <button class="btn-info" asp-action="Index" asp-controller="Items">
+                                <button class="btn-info m-1" asp-action="Index" asp-controller="Items">
                                     @Localizer["View items"]
                                 </button>
                                 @if (ViewBag.Role != null && ViewBag.Role[0] == "admin")
