--- a/Collectors/Views/Collections/Index.cshtml
+++ b/Collectors/Views/Collections/Index.cshtml
@@ -15,7 +15,7 @@
     </div>
 </div>
 
-<div class="container">
+<div class="container pb-5">
     <div class="align-content-center">
         <div class="card-columns">
             @{
