--- a/Collectors/Views/Items/Add.cshtml
+++ b/Collectors/Views/Items/Add.cshtml
@@ -60,7 +60,7 @@
                                 @SharedLocalizer["Looks good!"]
                             </div>
                             <div class="invalid-feedback">
-                                @SharedLocalizer["Field"] @Model.AdditionalFieldsNames
+                                @SharedLocalizer["Field"] @Model.AdditionalFieldsNames[j]
                                 @SharedLocalizer["can't be empty"]
                             </div>
                         </div>
