--- a/Collectors/Views/Home/Index.cshtml
+++ b/Collectors/Views/Home/Index.cshtml
@@ -11,7 +11,6 @@
     ViewData["Title"] = "Home Page";
 }
 @model StartModel;
-
 <div class="text-center pb-5">
     <div id="carouselExampleControls" class="carousel slide w-100" data-ride="carousel">
         <div class="carousel-inner">
@@ -31,7 +30,9 @@
                             <img class="center-block w-100 h-auto" src="~/img/blank.jfif" alt="">
                         }
                         <div class="centered">
-                            <h1 class="big-header">@SharedLocalizer[Enum.GetValues(typeof(CollectionTheme)).GetValue(collection.ThemeId).ToString()]</h1>
+                            <h1 class="big-header">@SharedLocalizer[Enum.GetValues(typeof(CollectionTheme))
+                                                  .GetValue(collection.ThemeId).ToString()]
+                            </h1>
                             <div class="description">@Html.Raw(Markdown.ToHtml(collection.ShortDescription))</div>
                             <form>
                                 <input name="id" type="hidden" value="@collection.Id" />
