--- a/Collectors/Views/Shared/_LoginPartial.cshtml
+++ b/Collectors/Views/Shared/_LoginPartial.cshtml
@@ -5,13 +5,21 @@
 
 <ul class="navbar-nav mr-3">
     <li class="nav-item dropdown">
-        @if (SignInManager.IsSignedIn(User))
-        {
+    <li>
+        <a class="nav-link text-light font-weight-bolder mr-2" asp-controller="Collections" asp-action="ViewAll">
+            @Localizer["All collections"]
+        </a>
+    </li>
+    @if (SignInManager.IsSignedIn(User))
+    {
         <li class="nav-item">
             <a class="nav-link text-light font-weight-bolder mr-2" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">@Localizer["Profile"]</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-light font-weight-bolder mr-2" asp-controller="Collections" asp-action="Index">@Localizer["My сollections"]</a>
+
+            <a class="nav-link text-light font-weight-bolder mr-2" asp-controller="Collections" asp-action="Index">
+                @Localizer["My сollections"]
+            </a>
         </li>
         <li class="nav-item">
             <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
@@ -28,4 +36,4 @@
             <a class="nav-link text-light font-weight-bolder mr-2" asp-area="Identity" asp-page="/Account/Login">@Localizer["Login"]</a>
         </li>
     }
-    </ul>
+</ul>
