--- a/Collectors/Views/Item/Index.cshtml
+++ b/Collectors/Views/Item/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@using System.Web;
 @using Microsoft.AspNetCore.Mvc.Localization;
 @inject IHtmlLocalizer<SharedResource> SharedLocalizer;
-<div class="container">
+<div class="container p-4">
     <h2>@SharedLocalizer["Discussion about item"]</h2>
     <div id="inputForm">
         <input class="form-control" type="text" id="message"
