--- a/Collectors/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Collectors/Areas/Identity/Pages/Account/Login.cshtml
@@ -48,24 +48,27 @@
             </section>
         </div>
         <div class="col-md-6 col-md-offset-2">
-            <img src="~/img/signup-image.jpg" class="form-img"/>
+            <img src="~/img/signup-image.jpg" class="form-img" />
             <section>
                 <h4>@Localizer["SocialLogin"]</h4>
                 <hr />
                 @{
-                    <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
-                        <div>
-                            <p>
-                                @foreach (var provider in Model.ExternalLogins)
-                                {
-                                    <button type="submit" class="btn btn-primary" name="provider"
-                                            value="@provider.Name" title="Log in using your @provider.DisplayName account">
-                                        @provider.DisplayName
+                    if ((Model.ExternalLogins?.Count ?? 0) != 0)
+                    {
+                        <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
+                            <div>
+                                <p>
+                                    @foreach (var provider in Model.ExternalLogins)
+                                    {
+                                        <button type="submit" class="btn btn-primary" name="provider"
+                                                value="@provider.Name" title="Log in using your @provider.DisplayName account">
+                                            @provider.DisplayName
                                         </button>
                                     }
-                            </p>
-                        </div>
-                    </form>
+                                </p>
+                            </div>
+                        </form>
+                    }
                 }
             </section>
         </div>
